[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
config = "0.14"
actix-web = "4"
serde = { version = "1", features = ["derive"] }
reqwest = "0.12"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.11.0", features = ["v4"] }
chrono = "0.4.38"

[build-dependencies]
syn = "1"

[dependencies.sqlx]
version = "0.8.2"
default-features = false
features = [
    "runtime-async-std",
    "macros",
    "postgres",
]
